.node_modules/syntax-error/test/sources/yield.js
function *foo () {
    yield 5
}

(function *() {
    console.log(foo().next().value)
})().next();

(function *() { })();

(function * () {
    yield yield 3
})();
